# sibyl

./: .gitignore  README.md
contracts/sibyl/: Anchor.toml  rust-toolchain.toml
contracts/sibyl/programs/sibyl/: Cargo.toml
contracts/sibyl/programs/sibyl/src/: lib.rs
contracts/sibyl/scripts/: e2e-devnet.ts
contracts/sibyl/tests/: sibyl.ts
docs/: contract-design.md
frontend/: jest.config.ts  jest.polyfill.ts  package-lock.json  package.json
frontend/__tests__/components/: BetForm.test.tsx  MarketCard.test.tsx  OddsBar.test.tsx  PositionDisplay.test.tsx
frontend/__tests__/lib/: constants.test.ts  program.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/markets/[id]/: page.tsx
frontend/components/: BetForm.tsx  Header.tsx  MarketCard.tsx  OddsBar.tsx  PositionDisplay.tsx  WalletProvider.tsx
frontend/lib/: constants.ts  idl.ts  program.ts  sibyl_idl.json  types.ts
oracle/: .env.example  README.md  markets.json  pyproject.toml
oracle/src/: __init__.py  chain.py  judge.py  main.py  researcher.py  types.py  utils.py
oracle/src/providers/: __init__.py  claude.py  gemini.py  openai.py
oracle/tests/: conftest.py  test_chain.py  test_judge.py  test_providers.py  test_researcher.py  test_utils.py
